--- a/trademart/package.json
+++ b/trademart/package.json
@@ -7,14 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "chart.js": "^3.9.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
