--- a/coffee-cart/backend/package.json
+++ b/coffee-cart/backend/package.json
@@ -4,6 +4,7 @@
   "description": "This is backend to handle services from frontend",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
