--- a/Grocery/grocery/package.json
+++ b/Grocery/grocery/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "spinners-react": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
